add new content

--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
     <video width="500px" height="500px" controls="controls">
         <source src="this is me cat piano.mp4" type="video/mp4" />
     </video>
+
+
+    <h2 style="background-color: black;">Week 8</h2>
+    <p>
+        too much work, dont want upload anything
+    </p>
 </body>
 </html> 
