--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
     <p>
         too much work, dont want upload anything
     </p>
+
+    <h2 style="background-color: black;">Week 12</h2>
+    <p>
+        why we have to do this, this is absolutely useless, we dont have anything or anytime to upload shit to github!!
+    </p>
 </body>
 </html> 
